fixed modal alignment

--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
 :root {
     --primary-color: white;
     --secondary-color: black;
-    --h1-font: 'Playfair Display';
-    --main-font: 'Playfair Display SC';
+    --primary-font: 'Playfair Display SC';
+    --secondary-font: 'Playfair Display';
 }
 
 @supports (display: grid) {
@@ -19,7 +19,6 @@
         grid-template-columns: 3fr;
         grid-gap: 3rem;
         text-align: center;
-        font-family: var(--main-font);
     }
 
     #students {
@@ -40,7 +39,7 @@ body {
 h1 {
     margin-bottom: 10px;
     margin-top: 50px;
-    font-family: var(--main-font);
+    font-family: var(--primary-font);
     font-size: 40px;
     color: var(--secondary-color);
     text-align: center;
@@ -48,14 +47,13 @@ h1 {
 
 h2 {
     color: var(--secondary-color);
-    font-family: var(--main-font);
-    text-align: center;
+    font-family: var(--secondary-font);
     font-weight: 100;
 }
 
 p {
     color: var(--secondary-color);
-    font-family: var(--h1-font);
+    font-family: var(--secondary-font);
     text-align: center;
 }
 
@@ -99,13 +97,13 @@ p {
 
 /*----------------------TEMPLATE-------------------*/
 .studentName {
-    font-family: "Courier";
+    font-family: var(--secondary-font);
     font-size: 16px;
     color: var(--secondary-color);
 }
 
 .houseName {
-    font-family: "Courier";
+    font-family: var(--secondary-font);
     font-size: 12px;
     color: black;
 }
@@ -160,43 +158,52 @@ article {
 .modal-content {
     margin: 1em;
     padding: 2em;
-    width: 50%;
+    width: 35%;
     color: var(--secondary-color);
     background-color: var(--primary-color);
     display: block;
     margin-left: auto;
     margin-right: auto;
-    font-family: var(--main-font);
+    font-family: var(--secondary-font);
 }
 
 .modal-name {
     color: var(--secondary-color);
-    font-family: var(--main-font);
+    font-family: var(--secondary-font);
     font-size: 1.5em;
+    text-align: left;
 }
 
 .modal-house {
-    font-family: var(--main-font);
+    font-family: var(--secondary-font);
     font-size: 2em;
+    text-align: left;
 }
 
 .crest {
     background-image: var(--house-crest);
     position: relative;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 30%;
+    display: flex;
+    justify-content: left;
 }
 
-.photo {
-    position: relative;
+.modal-photo {
     width: 18%;
+    display: flex;
+    justify-content: left;
+}
+
+.gender {
+    text-align: left;
+}
+
+.prefect {
+    text-align: left;
 }
 
 /*-----------------------THEMES--------------------*/
 #theme-changer {
-    font-family: "Courier";
+    font-family: var(--primary-font);
     color: var(--secondary-color);
     padding: 30px;
     display: flex;
@@ -204,9 +211,10 @@ article {
     padding: 30px;
 }
 
-#theme {
+select#theme {
     border: black 1px solid;
-    font-family: "Courier";
+    font-family: var(--secondary-color);
+    padding: 30px;
 }
 
 /*--------------------------------SEARCH OPTION----------------------------*/
